# ScholarWriting

./: CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/scholar-writing/: SKILL.md
.codex/agents/: scholar-architect.toml  scholar-reviewer.toml  scholar-revision.toml  scholar-writer.toml
docs/: architecture.md  codex-architecture.md  codex-getting-started.md  configuration.md  extending.md  reference-integration-redesign.md
scholar_writing/: cli.py
scholar_writing/core/: config.py  paths.py  project.py  references.py  schema.py  state.py  taskpack.py  workflow.py
scholar_writing/prompts/: architect.md  reviewer.md  revision.md  writer.md
scholar_writing/resources/config/: reference_registry.yaml
scholar_writing/resources/references/paper/: citation-strategy.md  english-paper-polishing.md  paper-lifecycle-and-outline.md  paper-review-gates.md  paper-section-writing.md  paper-style-routing.md  peer-review-rubric.md  venue-and-visual-contract.md
scholar_writing/resources/schemas/: markdown_rules.yaml  scores.schema.yaml  taskpack.schema.yaml
scholar_writing/resources/scripts/: _argparse_zh.py  render_diagrams.py  validate.py
scholar_writing/resources/templates/nsfc/: base.yaml  联合基金.yaml
scripts/: install-codex.sh  uninstall-codex.sh
tests/: test_cli.py  test_codex_adapter.py  test_codex_install_scripts.py  test_core.py  test_nsfc_sections.py  test_references.py  test_scripts.py  test_taskpack_references.py  test_validate.py
